更改了重复验证

--- a/client/login.html
+++ b/client/login.html
@@ -21,7 +21,7 @@
                     <input type="text" value="" placeholder="账号" class="usernumber">
                 </div>
                 <div class="loginson">
-                    <input type="text" value="" placeholder="密码" class="password">
+                    <input type="password" value="" placeholder="密码" class="password">
                 </div>
                 <div class="loginson loginStyle loginButton">
                     <a href="javascript:;">登录</a>
